--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <li><span style="color: black;">Hindi (efficient in speaking)</span></li>
         <li><span style="color: black;">Urdu (efficient in speaking)</span></li>
         <li><span style="color: black;">Arabic (efficient in reading)</span></li>
-        <h3>
+        <h3 class="section">
             Personal information
             <hr>
         </h3>
@@ -119,7 +119,7 @@
         <li><span style="color: black;">Marital status: Unmarried</span></li>
         <li><span style="color: black;">Permanent address: Muladuli, Ishwardi, Pabna</span></li>
         <li><span style="color: black;">Present address: Society Rd, Nabinagar, Savar, Dhaka</span></li>
-        <h3>
+        <h3 class="section">
             Interets
             <hr>
         </h3>
@@ -127,7 +127,7 @@
         <li><span style="color: black;">Reading</span></li>
         <li><span style="color: black;">Gaming</span></li>
         <li><span style="color: black;">Travelling</span></li>
-        <h3>
+        <h3 class="section">
             Reference
             <hr>
         </h3>
