--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <li><span style="color: black;">Permanent address: Muladuli, Ishwardi, Pabna</span></li>
         <li><span style="color: black;">Present address: Society Rd, Nabinagar, Savar, Dhaka</span></li>
         <h3 class="section">
-            Interets
+            Interests
             <hr>
         </h3>
         <li><span style="color: black;">Coding</span></li>
