--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <tr>
                 <th>Qualification</th>
                 <th>Institution</th>
-                <th>Result</th>
+                <th>CGPA</th>
                 <th>Year</th>
             </tr>
             <tr>
