--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
             Personal information
             <hr>
         </h3>
-        <li><span style="color: black;">Father's name: Md. Piarul Islam</span></li>
-        <li><span style="color: black;">Mother's name: Shiuly Islam</span></li>
-        <li><span style="color: black;">Date of birth: 21<sup>st</sup> December, 2001</span></li>
-        <li><span style="color: black;">Religion: Islam</span></li>
-        <li><span style="color: black;">Marital status: Unmarried</span></li>
-        <li><span style="color: black;">Permanent address: Muladuli, Ishwardi, Pabna</span></li>
-        <li><span style="color: black;">Present address: Society Rd, Nabinagar, Savar, Dhaka</span></li>
+        <li><span style="color: black;">Father's name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: Md. Piarul Islam</span></li>
+        <li><span style="color: black;">Mother's name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: Shiuly Islam</span></li>
+        <li><span style="color: black;">Date of birth&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: 21<sup>st</sup> December, 2001</span></li>
+        <li><span style="color: black;">Religion&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: Islam</span></li>
+        <li><span style="color: black;">Marital status&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: Unmarried</span></li>
+        <li><span style="color: black;">Permanent address&nbsp;&nbsp;: Muladuli, Ishwardi, Pabna</span></li>
+        <li><span style="color: black;">Present address&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp: Society Rd, Nabinagar, Savar, Dhaka</span></li>
         <h3 class="section">
             Interests
             <hr>
