--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
             Extracurricular activities
             <hr>
         </h3>
-        <li><span style="color: black;">Participated in TakeOff programming contest Spring-2022 arranged by DIU CPC <i>(Rank: 5th)</i></span></li>
+        <li><span style="color: black;">Participated in TakeOff programming contest Fall-2022 arranged by DIU CPC <i>(Rank: 5th)</i></span></li>
         <li><span style="color: black;">Member of DIU Computer Programming Club</span></li>
+        <li><span style="color: black;">Member of SCPSC Science Club</span></li>
         <h3 class="section">
             Linguistic proficiency
             <hr>
