--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <hr>
         </h3>
         <ul>
-            <li><span style="color: black;">Participated in TakeOff programming contest Fall-2022 arranged by DIU CPC <i>(Rank: 5th)</i></span></li>
+            <li><span style="color: black;">Participated in TakeOff programming contest Spring-2022 arranged by DIU CPC <i>(Rank: 5th)</i></span></li>
             <li><span style="color: black;">Member of DIU Computer Programming Club</span></li>
             <li><span style="color: black;">Member of SCPSC Science Club</span></li>
         </ul>
